<resources>
    <string name="app_name">BeeCalc</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="operation">Operation</string>
    <string name="calculate">Calculate</string>
    <string name="number_one">Number 1</string>
    <string name="number_two">Number 2</string>
    <string name="about">About</string>
    <string name="field_required">This field is required</string>
    <string name="error">Error</string>
    <string name="app_description">A simple calculator app for BINUS University MOOP assignment.</string>
    <string name="version">Version</string>
    <string name="created_by">Created by Stanley</string>
    <string name="view_on_github">View project on GitHub</string>
    <string name="view_license">View Open Source License</string>
</resources>
